--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,17 +14,28 @@
 
 version: 2
 updates:
-- package-ecosystem: "gomod"
-  directory: "/"
-  schedule:
-    interval: "daily"
+  - package-ecosystem: "gomod"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    labels: ["dependencies"]
+    commit-message:
+      prefix: "chore: deps"
 
-- package-ecosystem: "github-actions"
-  directory: "/"
-  schedule:
-    interval: "daily"
+  - package-ecosystem: "github-actions"
+    directories:
+      - "/.github/**"
+    schedule:
+      interval: "daily"
+    labels: ["dependencies"]
+    commit-message:
+      prefix: "chore: deps"
 
-- package-ecosystem: "terraform"
-  directory: "/"
-  schedule:
-    interval: "daily"
+  - package-ecosystem: "terraform"
+    directories:
+      - "/infra/**"
+    schedule:
+      interval: "daily"
+    labels: ["dependencies"]
+    commit-message:
+      prefix: "chore: deps"
